==> ryoon/toppers-jsp/config/armv6m/raspberrypi_pico/hw_serial.c <==
#include <t_services.h>
#include <sys_config.h>
#include <hw_serial.h>
#include <t_syslog.h>
#define INDEX_SIOP(siopid)	((UINT)((siopid) - 1))
#define get_siopcb(siopid)	(&(siopcb_table[INDEX_SIOP(siopid)]))
#define DEFAULT_PORT    1
#define USART1_RESET_ADDR  0x4000C000	/* TADR_RESETS_RESET */
#define USART1_RESET_CHECK 0x4000C008	/* TADR_RESETS_RESET_DONE */
#define RESET_U1_BIT       0x00400000	/* RESETS_RESET_UART0 */
#define USART2_RESET_ADDR  0x4000C000	/* TADR_RESETS_RESET */
#define USART2_RESET_CHECK 0x4000C008	/* TADR_RESETS_RESET_DONE */
#define RESET_U2_BIT       0x00800000	/* RESETS_RESET_UART1 */
#define REG_ALIAS_RW       0x00000000
#define REG_ALIAS_XOR      0x00001000
#define REG_ALIAS_SET      0x00002000
#define REG_ALIAS_CLR      0x00003000
#define TADR_IO_BANK0_BASE  0x40014000
#define TOFF_IO_BANK0_GPIO_CTRL 0x0004	/* GPIO control including function select and overrides */
  #define IO_BANK0_GPIO_CTRL_FUNCSEL           0x0000001F	/* selects pin function according to the gpio table */
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_XIP    0x00
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_SPI    0x01
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_UART   0x02
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_I2C    0x03
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_PWM    0x04
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_SIO    0x05
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_PIO0   0x06
  #define IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_PIO1   0x07

SIOPCB *
sio_opn_por(ID siopid, VP_INT exinf)
{
	SIOPCB          *siopcb = NULL;
	const SIOPINIB  *siopinib;
	BOOL  opnflg;
	UW base, reset, clock, mask;
	UW baud_rate_div, baud_ibrd, baud_fbrd;

	if((clock = get_Clock(CLK_PERI)) == 0){
		goto sio_opn_exit;
	}

	siopcb = get_siopcb(siopid);
	siopinib = siopcb->siopinib;

	/*
	 *  オープンしたポートがあるかをopnflgに読んでおく．
	 */
	opnflg = siopcb->opnflg;

	siopcb->exinf = exinf;
	base  = siopinib->base;
	reset = siopinib->reset;
	sil_dly_nse(10*1000);

	/*
	 *  ハードウェアの初期化
	 */
	pinmux_setup(siopinib->txpin, IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_UART);
	pinmux_setup(siopinib->rxpin, IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_UART);

	/*
	 *  UARTをリセット
	 */
	sil_wrw_mem((UW *)(siopinib->reset_addr+REG_ALIAS_SET), reset);
	sil_wrw_mem((UW *)(siopinib->reset_addr+REG_ALIAS_CLR), reset);
	while((sil_rew_mem((UW *)(siopinib->reset_done_addr)) & reset) == 0);

	/*
	 *  BAUD設定
	 */
	baud_rate_div = (8 * clock / DEF_BAUDRATE);
    baud_ibrd = baud_rate_div >> 7;
	if(baud_ibrd == 0){
		baud_ibrd = 1;
		baud_fbrd = 0;
    }
	else if(baud_ibrd >= 65535){
		baud_ibrd = 65535;
		baud_fbrd = 0;
	}
	else{
		baud_fbrd = ((baud_rate_div & 0x7f) + 1) / 2;
	}

	/*
	 *  Baudrate Dividor設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTIBRD), baud_ibrd);
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTFBRD), baud_fbrd);

	/*
	 *  ラインコントロールレジスタにダミー設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_SET), 0);

	/*
	 *  通信モード設定
	 */
	mask = ((sil_rew_mem((UW *)(base+TOFF_UART_UARTLCR_H)) ^ UART_MODE_VALUE) & UART_MODE_MASK);
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_XOR), mask);

	/*
	 *  送受信有効化
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTCR), (UART_UARTCR_UARTEN | UART_UARTCR_TXE | UART_UARTCR_RXE));

	/*
	 *  RX/TX DMA設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTDMACR), (UART_UARTDMACR_TXDMAE | UART_UARTDMACR_RXDMAE));

	/*
	 *  FIFO無効化
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_CLR), UART_UARTLCR_H_FEN);

	/*
	 *  割込み設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTIMSC), UART_UARTIMSC_RTIM);
	mask = (sil_rew_mem((UW *)(base+TOFF_UART_UARTIFLS)) & (UART_UARTIFLS_TXIFLSEL | UART_UARTIFLS_RXIFLSEL));
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTIFLS+REG_ALIAS_XOR), mask);
	siopcb->opnflg = TRUE;

	/*
	 *  シリアルI/O割込みのマスクを解除する．
	 */
	if (!opnflg) {
		x_config_int(siopinib->intno_usart, TRUE, siopinib->intpri);
	}
	sil_dly_nse(1000);

sio_opn_exit:;
	return(siopcb);
}

void
sio_cls_por(SIOPCB *siopcb)
{
	const SIOPINIB  *siopinib;

	siopinib = siopcb->siopinib;

	/*
	 *  UARTをリセット
	 */
	sil_wrw_mem((UW *)(siopinib->reset_addr+REG_ALIAS_SET), siopinib->reset);

	/*
	 *  シリアルI/O割込みをマスクする．
	 */
	if ((siopcb->opnflg)) {
		dis_int(siopinib->intno_usart);
	}
	siopcb->opnflg = FALSE;
}

Inline BOOL
sio_putintready(SIOPCB* siopcb)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;
	UW base = siopinib->base;
	UW imsc = sil_rew_mem((UW *)(base+TOFF_UART_UARTIMSC));

	if((imsc & UART_UARTIMSC_TXIM) != 0){
		return 1;
	}
	return 0;
}

Inline BOOL
sio_getintready(SIOPCB* siopcb)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;
	UW base = siopinib->base;
	UW imsc = sil_rew_mem((UW *)(base+TOFF_UART_UARTIMSC));
	UW ufr  = sil_rew_mem((UW *)(base+TOFF_UART_UARTFR));

	if ((imsc & UART_UARTIMSC_RXIM) != 0 && (ufr & UART_UARTFR_RXFE) == 0){
		return 1;
	}
	return 0;
}

Inline BOOL
sio_putready(SIOPCB* siopcb)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;
	if((sil_rew_mem((UW *)(siopinib->base+TOFF_UART_UARTFR)) & UART_UARTFR_TXFF) == 0)
		return TRUE;
	else
		return FALSE;
}

void
sio_ena_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;
	UW base = siopinib->base;

	switch (cbrtn) {
	case SIO_ERDY_SND:
		sil_wrw_mem((UW *)(base+TOFF_UART_UARTIMSC+REG_ALIAS_SET), UART_UARTIMSC_TXIM);
		break;
	case SIO_ERDY_RCV:
		sil_wrw_mem((UW *)(base+TOFF_UART_UARTIMSC+REG_ALIAS_SET), UART_UARTIMSC_RXIM);
		break;
	}
}

void
sio_dis_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;
	UW base = siopinib->base;

	switch (cbrtn) {
	case SIO_ERDY_SND:
		sil_wrw_mem((UW *)(base+TOFF_UART_UARTIMSC+REG_ALIAS_CLR), UART_UARTIMSC_TXIM);
		break;
	case SIO_ERDY_RCV:
		sil_wrw_mem((UW *)(base+TOFF_UART_UARTIMSC+REG_ALIAS_CLR), UART_UARTIMSC_RXIM);
		break;
	}
}

void
sio_snd_chr_pol(char c)
{
	ID	my_port_id = x_prc_index() + 1;
	const SIOPINIB  *siopinib;
	UW	base;

	if (my_port_id > TNUM_PORT) {
		my_port_id = DEFAULT_PORT;
	}

	siopinib = &siopinib_table[INDEX_SIOP(my_port_id)];
	base = siopinib->base;

	sil_wrw_mem((UW *)(base+TOFF_UART_UARTDR), (UW)c);
	while ((sil_rew_mem((UW *)(base+TOFF_UART_UARTFR)) & UART_UARTFR_TXFF) != 0);

	/*
	 *  出力が完全に終わるまで待つ
	 */
	volatile int n = SystemFrequency / (DEF_BAUDRATE/4);
	while(n--);
}

void
sio_init(void)
{
	ID	my_port_id = x_prc_index() + 1;
	const SIOPINIB  *siopinib;
	UW	base, reset, clock, mask;
	UW	baud_rate_div, baud_ibrd, baud_fbrd;

	if (my_port_id > TNUM_PORT) {
		return;
	}

	siopinib = &siopinib_table[INDEX_SIOP(my_port_id)];
	base = siopinib->base;
	reset = siopinib->reset;

	if((clock = get_Clock(CLK_PERI)) == 0)
		return;

	/*
	 *  ハードウェアの初期化
	 */
	sil_dly_nse(10*1000);
	pinmux_setup(siopinib->txpin, IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_UART);
	pinmux_setup(siopinib->rxpin, IO_BANK0_GPIO_CTRL_FUNCSEL_VALUE_UART);

	/*
	 *  UARTをリセット
	 */
	sil_wrw_mem((UW *)(siopinib->reset_addr+REG_ALIAS_SET), reset);
	sil_wrw_mem((UW *)(siopinib->reset_addr+REG_ALIAS_CLR), reset);
	while((sil_rew_mem((UW *)(siopinib->reset_done_addr)) & reset) == 0);

	/*
	 *  BAUD設定
	 */
	baud_rate_div = (8 * clock / DEF_BAUDRATE);
    baud_ibrd = baud_rate_div >> 7;
	if(baud_ibrd == 0){
		baud_ibrd = 1;
		baud_fbrd = 0;
    }
	else if(baud_ibrd >= 65535){
		baud_ibrd = 65535;
		baud_fbrd = 0;
	}
	else{
		baud_fbrd = ((baud_rate_div & 0x7f) + 1) / 2;
	}

	/*
	 *  Baudrate Dividor設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTIBRD), baud_ibrd);
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTFBRD), baud_fbrd);

	/*
	 *  ラインコントロールレジスタにダミー設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_SET), 0);

	/*
	 *  通信モード設定
	 */
	mask = ((sil_rew_mem((UW *)(base+TOFF_UART_UARTLCR_H)) ^ UART_MODE_VALUE) & UART_MODE_MASK);
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_XOR), mask);

	/*
	 *  送受信有効化
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTCR), (UART_UARTCR_UARTEN | UART_UARTCR_TXE | UART_UARTCR_RXE));

	/*
	 *  RX/TX DMA設定
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTDMACR), (UART_UARTDMACR_TXDMAE | UART_UARTDMACR_RXDMAE));

	/*
	 *  FIFO無効化
	 */
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTLCR_H+REG_ALIAS_CLR), UART_UARTLCR_H_FEN);

	/*
	 *  割込み設定
	 */
	mask = (sil_rew_mem((UW *)(base+TOFF_UART_UARTIFLS)) & (UART_UARTIFLS_TXIFLSEL | UART_UARTIFLS_RXIFLSEL));
	sil_wrw_mem((UW *)(base+TOFF_UART_UARTIFLS+REG_ALIAS_XOR), mask);
	sil_dly_nse(1000);
}
