==> ryoon/toppers-jsp/config/armv6m/nucleo_g0b1re/hw_serial.c <==
#include <t_services.h>
#include <sys_config.h>
#include <hw_serial.h>
#include <t_syslog.h>
#define sil_orw_mem(a, b)		sil_wrw_mem((a), sil_rew_mem(a) | (b))
#define sil_andw_mem(a, b)		sil_wrw_mem((a), sil_rew_mem(a) & ~(b))
#define sil_modw_mem(a, b, c)	sil_wrw_mem((a), (sil_rew_mem(a) & (~b)) | (c))
#define INDEX_SIOP(siopid)	((UINT)((siopid) - 1))
#define get_siopcb(siopid)	(&(siopcb_table[INDEX_SIOP(siopid)]))
#define DEFAULT_PORT    1
#define HSI_VALUE       8000000				/* Value of the Internal oscillator in Hz*/
#define LSE_VALUE       32768				/* Value of the LSE oscillator in Hz */
#define TOFF_GPIO_MODER     0x0000		/* (RW) GPIO port mode register */
#define TOFF_GPIO_OTYPER    0x0004		/* (RW) GPIO port output type register */
#define TOFF_GPIO_OSPEEDR   0x0008		/* (RW) GPIO port output speed register */
#define TOFF_GPIO_PUPDR     0x000C		/* (RW) GPIO port pull-up/pull-down register */
#define TOFF_GPIO_AFR0      0x0020		/* (RW) GPIO alternate function registers */
#define TOFF_GPIO_AFR1      0x0024		/* (RW) GPIO alternate function registers */
#define TOFF_USART_CR1      0x0000		/* (RW-32) USART Control register 1 */
  #define USART_CR1_UE       0x00000001	/* USART Enable */
  #define USART_CR1_UESM     0x00000002	/* USART Enable in STOP Mode */
  #define USART_CR1_RE       0x00000004	/* Receiver Enable */
  #define USART_CR1_TE       0x00000008	/* Transmitter Enable */
  #define USART_CR1_IDLEIE   0x00000010	/* IDLE Interrupt Enable */

SIOPCB *
sio_opn_por(ID siopid, VP_INT exinf)
{
	SIOPCB          *siopcb = NULL;
	const SIOPINIB  *siopinib;
	BOOL	opnflg;
	UW	base, txbase, rxbase;
	UW	apbclock, tmp;


	siopcb = get_siopcb(siopid);
	siopinib = siopcb->siopinib;

	/*
	 *  オープンしたポートがあるかをopnflgに読んでおく．
	 */
	opnflg = siopcb->opnflg;

	siopcb->exinf = exinf;
	txbase = siopinib->txportbase;
	rxbase = siopinib->rxportbase;

	if(txbase == 0 || rxbase == 0)	/* no usart port */
		goto sio_opn_exit;

	/*
	 *  ハードウェアの初期化
	 */
	sil_orw_mem((UW *)siopinib->clockbase, siopinib->clock_set);
	sil_orw_mem((UW *)siopinib->portbase, siopinib->port_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_MODER), siopinib->txmode_msk, siopinib->txmode_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_OSPEEDR), siopinib->txspeed_msk, siopinib->txspeed_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_OTYPER), siopinib->txtype_msk, siopinib->txtype_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_PUPDR), siopinib->txpupd_msk, siopinib->txpupd_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_MODER), siopinib->rxmode_msk, siopinib->rxmode_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_OSPEEDR), siopinib->rxspeed_msk, siopinib->rxspeed_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_OTYPER), siopinib->rxtype_msk, siopinib->rxtype_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_PUPDR), siopinib->rxpupd_msk, siopinib->rxpupd_set);
	setup_gpio_source(txbase, siopinib->txpinport, siopinib->gpio_af);
	setup_gpio_source(rxbase, siopinib->rxpinport, siopinib->gpio_af);

	base = siopinib->base;

	sil_andw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_UE);
	sil_modw_mem((UW *)(base+TOFF_USART_CR1), CR1_CLEAR_MASK, (USART_WordLength_8b | USART_Parity_No | USART_CR1_RE | USART_CR1_TE));
	sil_modw_mem((UW *)(base+TOFF_USART_CR2), USART_CR2_STOP, USART_StopBits_1);
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), CR3_CLEAR_MASK, USART_HardwareFlowControl_None);

	if(siopinib->srcindex < 32)
		tmp = (sil_rew_mem((UW *)(TADR_RCC_BASE+TOFF_RCC_CCIPR)) >> siopinib->srcindex) & RCC_CCIPR_USART1SEL;
	else
		tmp = RCC_USARTCLKSOURCE_PCLK1;
	switch(tmp){
	case RCC_USARTCLKSOURCE_HSI:
		apbclock = HSI_VALUE;
		break;
	case RCC_USARTCLKSOURCE_LSE:
		apbclock = LSE_VALUE;
		break;
	case RCC_USARTCLKSOURCE_SYSCLK:
		apbclock = SysFreHCLK;
		break;
	default:
		apbclock = SysFrePCLK1;
		break;
	}

	if((sil_rew_mem((UW *)(base+TOFF_USART_CR1)) & USART_CR1_OVER8) != 0){
		UW usartdiv = ((apbclock*2) + (DEF_BAUDRATE/2)) / DEF_BAUDRATE;
		tmp = usartdiv & 0xFFF0U;
		tmp |= (UH)((usartdiv & 0x0000000F) >> 1);
	}
	else{
		tmp = (apbclock + (DEF_BAUDRATE/2)) / DEF_BAUDRATE;
	}
	sil_wrw_mem((UW *)(base+TOFF_USART_BRR), tmp);

	/*
	 *  FIFO設定処理
	 */
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_TXFTCFG, UART_TXFIFO_THRESHOLD_1_8);
#ifdef USE_USART_FIFO
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_RXFTCFG, UART_RXFIFO_THRESHOLD_8_8);
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_FIFOEN);
#else
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_RXFTCFG, UART_RXFIFO_THRESHOLD_1_8);
	sil_andw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_FIFOEN);
#endif
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), (USART_CR1_PEIE | USART_CR1_RXNEIE_RXFNEIE));
	siopcb->opnflg = TRUE;

	/*
	 *  シリアルI/O割込みのマスクを解除する．
	 */
	if (!opnflg) {
		x_config_int(siopinib->intno_usart, TRUE, siopinib->intpri);
	}
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_UE);

sio_opn_exit:;
	return(siopcb);
}

void
sio_cls_por(SIOPCB *siopcb)
{
	const SIOPINIB  *siopinib;

	siopinib = siopcb->siopinib;

	/*
	 *  シリアルI/O割込みをマスクする．
	 */
	if ((siopcb->opnflg)) {
		dis_int(siopinib->intno_usart);
		sil_andw_mem((UW *)(siopinib->base+TOFF_USART_CR1), USART_CR1_UE);
		sil_andw_mem((UW *)(siopinib->clockbase), siopinib->clock_set);
	}
	siopcb->opnflg = FALSE;
}

Inline BOOL
sio_putintready(SIOPCB* siopcb)
{
	UW cr1 = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_CR1));
	UW isr = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_ISR));
	UW cr3 = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_CR3));

	if (((cr1 & USART_CR1_TXEIE_TXFNFIE) != 0 && (isr & USART_ISR_TC) != 0) || (cr3 & USART_CR3_TXFTIE) != 0) {
		return 1;
	}
	return 0;
}

Inline BOOL
sio_getintready(SIOPCB* siopcb)
{
	UW cr1 = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_CR1));
	UW isr = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_ISR));
	UW cr3 = sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_CR3));
	UH temp;

	if ((isr & (USART_ISR_ORE | USART_ISR_NE | USART_ISR_FE | USART_ISR_PE)) != 0) {
		temp = 0;
		sil_dly_nse(100*1000);
		syslog(LOG_INFO, "sio_usart_isr error (%d) isr[%04x] !", siopcb->siopinib->intno_usart, isr);
		sil_andw_mem((UW *)(siopcb->siopinib->base+TOFF_USART_CR3), USART_CR3_EIE);
		temp = sil_reh_mem((UH *)(siopcb->siopinib->base+TOFF_USART_RDR));
		(void)(temp);
		return 0;
	}
	if (((cr1 & USART_CR1_RXNEIE_RXFNEIE) != 0 && (isr & USART_ISR_RXNE_RXFNE) != 0) || (cr3 & USART_CR3_RXFTIE) != 0) {
		return 1;
	}
	return 0;
}

Inline BOOL
sio_putready(SIOPCB* siopcb)
{
#ifdef USE_USART_FIFO
	while ((sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_ISR)) & USART_ISR_TXE_TXFNF) == 0);
#else
	while ((sil_rew_mem((UW *)(siopcb->siopinib->base+TOFF_USART_ISR)) & USART_ISR_TC) == 0);
#endif
	return 1;
}

void
sio_ena_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;

	switch (cbrtn) {
	case SIO_ERDY_SND:
#ifdef USE_USART_FIFO
		sil_orw_mem((UW *)(siopinib->base+TOFF_USART_CR3), USART_CR3_TXFTIE);
#else
		sil_orw_mem((UW *)(siopinib->base+TOFF_USART_CR1), USART_CR1_TXEIE_TXFNFIE);
#endif
		break;
	case SIO_ERDY_RCV:
		sil_orw_mem((UW *)(siopinib->base+TOFF_USART_CR1), USART_CR1_RXNEIE_RXFNEIE);
		break;
	}
}

void
sio_dis_cbr(SIOPCB *siopcb, UINT cbrtn)
{
	const SIOPINIB  *siopinib = siopcb->siopinib;

	switch (cbrtn) {
	case SIO_ERDY_SND:
		sil_andw_mem((UW *)(siopinib->base+TOFF_USART_CR1), USART_CR1_TXEIE_TXFNFIE);
		sil_andw_mem((UW *)(siopinib->base+TOFF_USART_CR3), USART_CR3_TXFTIE);
		break;
	case SIO_ERDY_RCV:
		sil_andw_mem((UW *)(siopinib->base+TOFF_USART_CR1), USART_CR1_RXNEIE_RXFNEIE);
		break;
	}
}

void
sio_snd_chr_pol(char c)
{
	const SIOPINIB  *siopinib = &siopinib_table[INDEX_SIOP(DEFAULT_PORT)];
	UW base = siopinib->base;

	sil_wrw_mem((UW *)(base+TOFF_USART_TDR), (UW)c);
#ifdef USE_USART_FIFO
	while ((sil_rew_mem((UW *)(base+TOFF_USART_ISR)) & USART_ISR_TXE_TXFNF) == 0);
#else
	while ((sil_rew_mem((UW *)(base+TOFF_USART_ISR)) & USART_ISR_TC) == 0);
#endif

	/*
	 *  出力が完全に終わるまで待つ
	 */
	volatile int n = SystemFrequency / DEF_BAUDRATE;
	while(n--);
}

void
sio_init(void)
{
	const SIOPINIB	*siopinib = &siopinib_table[INDEX_SIOP(DEFAULT_PORT)];
	UW base, txbase, rxbase;
	UW apbclock, tmp;

	txbase = siopinib->txportbase;
	rxbase = siopinib->rxportbase;

	sil_andw_mem((UW *)(siopinib->resetbase), siopinib->reset_bit);

	sil_orw_mem((UW *)siopinib->clockbase, siopinib->clock_set);
	sil_orw_mem((UW *)siopinib->portbase, siopinib->port_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_MODER), siopinib->txmode_msk, siopinib->txmode_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_OSPEEDR), siopinib->txspeed_msk, siopinib->txspeed_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_OTYPER), siopinib->txtype_msk, siopinib->txtype_set);
	sil_modw_mem((UW *)(txbase+TOFF_GPIO_PUPDR), siopinib->txpupd_msk, siopinib->txpupd_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_MODER), siopinib->rxmode_msk, siopinib->rxmode_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_OSPEEDR), siopinib->rxspeed_msk, siopinib->rxspeed_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_OTYPER), siopinib->rxtype_msk, siopinib->rxtype_set);
	sil_modw_mem((UW *)(rxbase+TOFF_GPIO_PUPDR), siopinib->rxpupd_msk, siopinib->rxpupd_set);
	setup_gpio_source(txbase, siopinib->txpinport, siopinib->gpio_af);
	setup_gpio_source(rxbase, siopinib->rxpinport, siopinib->gpio_af);

	base = siopinib->base;

	sil_andw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_UE);
	sil_modw_mem((UW *)(base+TOFF_USART_CR1), CR1_CLEAR_MASK, (USART_WordLength_8b | USART_Parity_No | USART_CR1_RE | USART_CR1_TE));
	sil_modw_mem((UW *)(base+TOFF_USART_CR2), USART_CR2_STOP, USART_StopBits_1);
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), CR3_CLEAR_MASK, USART_HardwareFlowControl_None);

	if(siopinib->srcindex < 32)
		tmp = (sil_rew_mem((UW *)(TADR_RCC_BASE+TOFF_RCC_CCIPR)) >> siopinib->srcindex) & RCC_CCIPR_USART1SEL;
	else
		tmp = RCC_USARTCLKSOURCE_PCLK1;
	switch(tmp){
	case RCC_USARTCLKSOURCE_HSI:
		apbclock = HSI_VALUE;
		break;
	case RCC_USARTCLKSOURCE_LSE:
		apbclock = LSE_VALUE;
		break;
	case RCC_USARTCLKSOURCE_SYSCLK:
		apbclock = SysFreHCLK;
		break;
	default:
		apbclock = SysFrePCLK1;
		break;
	}

	if((sil_rew_mem((UW *)(base+TOFF_USART_CR1)) & USART_CR1_OVER8) != 0){
		UW usartdiv = ((apbclock*2) + (DEF_BAUDRATE/2)) / DEF_BAUDRATE;
		tmp = usartdiv & 0xFFF0U;
		tmp |= (UH)((usartdiv & (UH)0x000FU) >> 1U);
	}
	else{ /* if ((USARTx->CR1 & USART_CR1_OVER8) == 0) */
		tmp = (apbclock + (DEF_BAUDRATE/2)) / DEF_BAUDRATE;
	}
	sil_wrw_mem((UW *)(base+TOFF_USART_BRR), tmp);
	/*
	 *  FIFO設定処理
	 */
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_TXFTCFG, UART_TXFIFO_THRESHOLD_1_8);
#ifdef USE_USART_FIFO
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_RXFTCFG, UART_RXFIFO_THRESHOLD_8_8);
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_FIFOEN);
#else
	sil_modw_mem((UW *)(base+TOFF_USART_CR3), USART_CR3_RXFTCFG, UART_RXFIFO_THRESHOLD_1_8);
	sil_andw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_FIFOEN);
#endif
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), (USART_CR1_PEIE | USART_CR1_RXNEIE_RXFNEIE));
	sil_orw_mem((UW *)(base+TOFF_USART_CR1), USART_CR1_UE);
}
